[metadata]
name = python-cachetclient
summary = A client and library for the Cachet administrative interface
description-file =
    README.rst
author = David Moreau Simard
author-email = dms@redhat.com
home-page = https://github.com/dmsimard/python-cachetclient
classifier =
  License :: OSI Approved :: Apache Software License
  Development Status :: 4 - Beta
  Intended Audience :: Developers
  Intended Audience :: System Administrators
  Intended Audience :: Information Technology
  Programming Language :: Python :: 2.7
  Topic :: Utilities

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    cachetclient

[wheel]
universal = 1

[pbr]
skip_authors = True
skip_changelog = True
